--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "cookie-session": "^1.3.1",
+    "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.10",
     "passport": "^0.4.0",
