--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "proxy": {
+    "/auth/google": {
+      "target": "http://localhost:5000"
+    }
   }
 }
