--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.15.4",
     "mongoose": "^4.11.10",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
     "nodemon": "^1.12.0"
