--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^4.25.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.0"
