--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "sendgrid": "^5.2.3",
     "stripe": "^4.25.0"
   },
   "devDependencies": {
