--- a/package.json
+++ b/package.json
@@ -2,28 +2,36 @@
   "name": "survli",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "Victor Li <victorli5674@yahoo.com>",
+  "license": "MIT",
   "engines": {
-    "node": "8.1.1",
+    "node": "8.4.0",
     "npm": "5.0.3"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "server": "nodemon index.js",
+    "client": "cd client && yarn start",
+    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "heroku-postbuild": "cd client && yarn --production=false && yarn run build"
   },
-  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "cookie-session": "^2.0.0-beta.2",
+    "body-parser": "^1.18.1",
+    "cookie-session": "^1.3.1",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10",
+    "mongoose": "^4.11.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "react-stripe-checkout": "^2.6.3",
     "sendgrid": "^5.2.3",
-    "stripe": "^4.25.0"
+    "stripe": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.0"
+    "concurrently": "^3.5.0",
+    "eslint": "4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "nodemon": "^1.12.1"
   }
 }
