--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "cd client && yarn start",
-    "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "cd client && yarn --production=false && yarn run build"
+    "dev": "concurrently \"yarn run server\" \"yarn run client\" \"yarn run webhook\"",
+    "heroku-postbuild": "cd client && yarn --production=false && yarn run build",
+    "webhook": "forever sendgrid_webhook.js"
   },
   "dependencies": {
     "body-parser": "^1.18.1",
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "path-parser": "^2.0.2",
     "sendgrid": "^5.2.3",
     "stripe": "^5.0.0"
   },
@@ -32,6 +35,8 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
+    "forever": "^0.15.3",
+    "localtunnel": "^1.8.3",
     "nodemon": "^1.12.1"
   }
 }
